Avoid horizontal scrollbar on front page.
Two elements were a few pixels wider than available width.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,6 @@ hr.haar-nav {
 hr.haar-fijn {
 	border: 0;
     height: 15px;
-    width: 100vw;
     background: #f00699;
     margin: 0 auto;
 }
